@@ -2,7 +2,6 @@ package me.bechberger.panama;
 
 import java.lang.foreign.*;
 import java.lang.invoke.MethodHandle;
-import java.util.logging.MemoryHandler;
 
 /**
  * The equivalent Java program is in misc/read_line.c
@@ -15,21 +14,21 @@ public class HelloWorld {
         fclose(file);
     }
 
-    private static MethodHandle fopen = Linker.nativeLinker().downcallHandle(
+    private static final MethodHandle fopen = Linker.nativeLinker().downcallHandle(
             PanamaUtil.lookup("fopen"),
             FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.ADDRESS));
 
     public static MemorySegment fopen(String filename, String mode) {
-    try (var arena = Arena.ofConfined()) {
-        return (MemorySegment) fopen.invokeExact(
-                arena.allocateUtf8String(filename),
-                arena.allocateUtf8String(mode));
-    } catch (Throwable t) {
-        throw new RuntimeException(t);
+        try (var arena = Arena.ofConfined()) {
+            return (MemorySegment) fopen.invokeExact(
+                    arena.allocateUtf8String(filename),
+                    arena.allocateUtf8String(mode));
+        } catch (Throwable t) {
+            throw new RuntimeException(t);
+        }
     }
-}
 
-    private static MethodHandle fclose = Linker.nativeLinker().downcallHandle(
+    private static final MethodHandle fclose = Linker.nativeLinker().downcallHandle(
             PanamaUtil.lookup("fclose"),
             FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
 
@@ -41,14 +40,14 @@ public class HelloWorld {
         }
     }
 
-    private static MethodHandle fgets = Linker.nativeLinker().downcallHandle(
+    private static final MethodHandle fgets = Linker.nativeLinker().downcallHandle(
             PanamaUtil.lookup("fgets"),
             FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
 
     public static String gets(MemorySegment file, int size) {
         try (var arena = Arena.ofConfined()) {
             var buffer = arena.allocateArray(ValueLayout.JAVA_BYTE, size);
-            var ret = (MemorySegment)fgets.invokeExact(buffer, size, file);
+            var ret = (MemorySegment) fgets.invokeExact(buffer, size, file);
             if (ret == MemorySegment.NULL) {
                 return null;
             }
